@@ -1,10 +1,15 @@
 {
-  "count": 7,
-  "uniques": 5,
+  "count": 15,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 7,
+      "uniques": 5
+    },
+    {
+      "timestamp": "2022-04-19T00:00:00Z",
+      "count": 8,
       "uniques": 5
     }
   ]
